added instruction for Android installation

--- a/README
+++ b/README
@@ -12,7 +12,8 @@ iPhone:
 Android:
 1) Include Android/src as source-Folder in your project.
 2) Copy res/values/loading_spinner.xml in your projects res-folder. (Style for centered progress dialog without border)
-3) Include Android/js/transition.js in your index.html
+3) Add the import for your resource Java file (yourpackage.R) to LoadingSpinner.java
+4) Include Android/js/transition.js in your index.html
 
 
 Usage:
