--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+This plugin does not work with the current phonegap/cordova versions. Last working version was 0.9.x.
+
 Startup plugin for phonegap.
 ----------------------------
 
